# rust-backend-tutorials

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: blog.rs  databases.rs  for_later.rs  main.rs  serde_example.rs  serde_examples.rs  tauri_releases.rs  users.rs  utils.rs
static/: style.css
templates/: base.html.tera  login.html.tera  sign-up.html.tera
templates/blog/: index.html.tera  new.html.tera  new_post.html.tera  post.html.tera
